fix actions and events

--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Testing</title>
-    <script type="text/javascript" src="../KObservableObject/Build/KObservableObject.js"></script>
+    <script type="text/javascript" src="../../KObservableObject/Build/KObservableObject.js"></script>
   </head>
   <body>
     <h1 id="testDiv">Test Title</h1>
@@ -12,53 +12,33 @@
     <textarea id="testTextarea"></textarea>
     <div id="testDisplay"></div>
     <script type="text/javascript">
-        var OObj = CreateKObservableObject("test");
+        var OObj = KObservableObject("test");
 
-        OObj.add("test",500);
-        OObj.add("test1",600);
-        OObj.add("test2",700);
-        OObj.add("test3",800);
-
-        OObj.subscribe("test",function(e){
+        OObj.addActionListener('add',function(e){
           console.log(e);
-          console.log("change happend on test, ",e.value,e.oldValue,e.local.test);
         })
-        .subscribe("test1",function(e){
+        .addActionListener('set',function(e){
           console.log(e);
-          console.log("change happend on test1, ",e.value,e.oldValue,e.local.test1);
         })
-
-        OObj.onadd = function(e){
+        .addActionListener('remove',function(e){
           console.log(e);
-          console.log("onadd happened: ",e.value,e.key);
-        }
-
-        OObj.onremove = function(e){
-          console.log(e);
-          console.log("onremove happened: ",e.value,e.key);
-        }
-
-        OObj.onset = function(e){
-          console.log(e);
-          console.log("onset happened: ",e.value,e.oldValue,e.key);
-        }
-
-        OObj.onupdate = function(e){
-          console.log(e);
-          console.log("onupdate happened: ",e.value,e.oldValue,e.key);
-        }
-
-        OObj.test = 2000;
-
-        OObj.addActionListener('set',function(e){
-          console.log(e);
-          console.log('a push happened ',e.value,e.key);
         })
+        .addActionListener('addDataListener',function(e){
+          if(e.key === 'cool') e.preventDefault();
+        });
 
-        OObj.set("test2",600);
-        OObj.test1 = 200;
-
-        console.log(OObj.test,OObj.test1,OObj.test2,OObj.test3);
+        OObj.set('cool',500)
+        .set('something','cool')
+        .addDataListener('cool',function(e){
+          console.log(e);
+        })
+        .addDataListener('something',function(e){
+          console.log(e);
+        })
+        .subscribe('cool',function(e){
+          console.log(e);
+        })
+        
     </script>
   </body>
 </html>
